--- a/requirements.txt
+++ b/requirements.txt
@@ -1,185 +1,153 @@
-aiohttp==3.4.4
-alabaster==0.7.12
-appdirs==1.4.3
-arch==4.7.0
-arrow==0.12.1
-asn1crypto==0.24.0
-async-timeout==3.0.0
-atomicwrites==1.2.1
-attrs==18.1.0
-Automat==0.7.0
-awscli==1.16.111
-Babel==2.6.0
-backcall==0.1.0
-binaryornot==0.4.4
-bleach==2.1.4
-bokeh==0.13.0
-botocore==1.12.101
-Bottleneck==1.2.1
-cached-property==1.5.1
-certifi==2018.11.29
-cffi==1.11.5
-chardet==3.0.4
-click==6.7
-cloudpickle==0.5.5
-colorama==0.3.9
-constantly==15.1.0
-convertdate==2.1.3
-cookiecutter==1.6.0
-coverage==4.5.2
-cryptography==2.5
-cycler==0.10.0
-Cython==0.28.5
-cytoolz==0.9.0.1
-dask==1.0.0
-decorator==4.3.0
-descartes==1.1.0
-distributed==1.25.2
-docutils==0.14
-empyrical==0.3.4
-engarde==0.4.0
-entrypoints==0.2.3
-ephem==3.7.6.0
-fastparquet==0.1.6
-fbprophet==0.4
+anyio==4.0.0
+appdirs==1.4.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+arviz==0.12.1
+asttokens==2.4.0
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.12.1
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==6.0.0
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.15.1
+cftime==1.6.2
+charset-normalizer==3.2.0
+click==8.1.7
+cloudpickle==2.2.1
+comm==0.1.4
+contourpy==1.1.0
+cramjam==2.7.0
+cycler==0.11.0
+dask==2023.9.2
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+deprecat==2.1.1
+dill==0.3.7
+exceptiongroup==1.1.3
+executing==1.2.0
+fastjsonschema==2.18.0
+fastparquet==2023.8.0
+fastprogress==1.0.3
 ffn==0.3.4
-flake8==3.6.0
-future==0.17.1
-h5py==2.9.0
-heapdict==1.0.0
-holidays==0.9.8
-html5lib==1.0.1
-hyperlink==18.0.0
-idna==2.8
-iex-downloader==0.0.1
-imagesize==1.1.0
-imbalanced-learn==0.4.3
-incremental==17.5.0
-ipykernel==4.9.0
-ipython==6.5.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-jedi==0.12.1
-Jinja2==2.10
-jinja2-time==0.2.0
-jmespath==0.9.3
-joblib==0.12.5
-jsonschema==2.6.0
-jupyter-client==5.2.3
-jupyter-core==4.4.0
-kiwisolver==1.0.1
-llvmlite==0.26.0
-locket==0.2.0
-logzero==1.5.0
-lunardate==0.2.0
-lxml==4.2.5
-Mako==1.0.7
-MarkupSafe==1.1.0
-matplotlib==3.0.2
-mccabe==0.6.1
-missingno==0.4.1
-mistune==0.8.3
-mizani==0.5.3
-mkl-fft==1.0.6
-mkl-random==1.0.2
-monthly-returns-heatmap==0.0.11
-more-itertools==4.3.0
-msgpack==0.5.6
-multidict==4.3.1
-nb-conda==2.2.1
-nb-conda-kernels==2.1.0
-nbconvert==5.3.1
-nbformat==4.4.0
-notebook==5.7.4
-numba==0.41.0
-numpy==1.15.4
-packaging==19.0
-palettable==3.1.1
-pandas==0.23.4
-pandas-datareader==0.7.0
-pandas-market-calendars==0.21.1
-pandocfilters==1.4.2
-parso==0.3.1
-partd==0.3.8
-patsy==0.5.0
-pexpect==4.6.0
-pickleshare==0.7.4
-plotly==3.4.2
-plotnine==0.5.1
-pluggy==0.7.1
-poyo==0.4.2
-prometheus-client==0.3.1
-prompt-toolkit==1.0.15
-psutil==5.4.7
-psycopg2==2.7.6.1
-ptyprocess==0.6.0
-py==1.6.0
-pyarrow==0.11.1
-pyasn1==0.4.4
-pyasn1-modules==0.2.2
-pycodestyle==2.4.0
-pycparser==2.19
-pyflakes==2.0.0
-pyfolio==0.8.0
-Pygments==2.3.1
-pygpu==0.7.6
-PyJWT==1.7.1
-pymc3==3.6
-pyOpenSSL==19.0.0
-pyparsing==2.3.1
-PySocks==1.6.8
-pystan==2.18.1.0
-PyStore==0.1.5
-pytest==3.7.4
-pytest-runner==4.2
-python-dateutil==2.7.3
-python-dotenv==0.10.1
-python-snappy==0.5.3
-pytz==2018.9
-PyYAML==3.13
-pyzmq==17.1.2
-requests==2.21.0
-retrying==1.3.3
-rsa==3.4.2
-s3transfer==0.2.0
-scikit-learn==0.20.2
-scikit-misc==0.1.1
-scipy==1.1.0
-seaborn==0.9.0
-Send2Trash==1.5.0
-service-identity==17.0.0
-simplegeneric==0.8.1
-simplejson==3.16.0
-six==1.12.0
-snowballstemmer==1.2.1
-sortedcontainers==2.0.5
-Sphinx==1.8.4
-sphinxcontrib-websupport==1.1.0
+filelock==3.12.4
+fonttools==4.42.1
+fqdn==1.5.1
+frozendict==2.3.8
+fsspec==2023.9.1
+future==0.18.3
+h5netcdf==1.2.0
+h5py==3.9.0
+html5lib==1.1
+idna==3.4
+importlib-metadata==6.8.0
+ipykernel==6.25.2
+ipython==8.15.0
+isoduration==20.11.0
+jedi==0.19.0
+Jinja2==3.1.2
+joblib==1.3.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter-events==0.7.0
+jupyter-lsp==2.2.0
+jupyter_client==8.3.1
+jupyter_core==5.3.1
+jupyter_server==2.7.3
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.6
+jupyterlab-pygments==0.2.2
+jupyterlab_server==2.25.0
+kiwisolver==1.4.5
+llvmlite==0.40.1
+locket==1.0.0
+logzero==1.7.0
+lxml==4.9.3
+MarkupSafe==2.1.3
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+missingno==0.5.2
+mistune==3.0.1
+multitasking==0.0.11
+nbclient==0.8.0
+nbconvert==7.8.0
+nbformat==5.9.2
+nest-asyncio==1.5.7
+netCDF4==1.6.4
+notebook==7.0.3
+notebook_shim==0.2.3
+numba==0.57.1
+numpy==1.21.6
+overrides==7.4.0
+packaging==23.1
+pandas==2.0.0
+pandas-datareader==0.10.0
+pandocfilters==1.5.0
+parso==0.8.3
+partd==1.4.0
+patsy==0.5.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.0.1
+platformdirs==3.10.0
+prometheus-client==0.17.1
+prompt-toolkit==3.0.39
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==13.0.0
+pycparser==2.21
+Pygments==2.16.1
+pymc3==3.11.5
+pyparsing==3.1.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==25.1.1
+referencing==0.30.2
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.10.3
+scikit-learn==1.3.0
+scipy==1.7.3
+seaborn==0.12.1
+semver==3.0.1
+Send2Trash==1.8.2
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
 src==0.0.1
-statsmodels==0.9.0
-tabulate==0.8.2
-tblib==1.3.2
-terminado==0.8.1
-testpath==0.3.1
-Theano==1.0.2+2.gc449c86.dirty
-thrift==0.11.0
-timeutils==0.3.2
-toolz==0.9.0
-tornado==5.0.2
-tqdm==4.28.1
-traitlets==4.3.2
-Twisted==19.7.0
-tzlocal==1.5.1
-urllib3==1.24.1
-uvloop==0.11.3
-watermark==1.6.1
-wcwidth==0.1.7
+stack-data==0.6.2
+statsmodels==0.14.0
+tabulate==0.9.0
+terminado==0.17.1
+Theano-PyMC==1.1.2
+threadpoolctl==3.2.0
+tinycss2==1.2.1
+tomli==2.0.1
+toolz==0.12.0
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.10.0
+typing_extensions==4.7.1
+tzdata==2023.3
+uri-template==1.3.0
+urllib3==2.0.4
+watermark==2.4.3
+wcwidth==0.2.6
+webcolors==1.13
 webencodings==0.5.1
-websocket-client==0.54.0
-websockets==7.0
-whichcraft==0.5.2
-widgetsnbextension==3.4.2
-wrapt==1.10.11
-yarl==1.2.6
-zict==0.1.3
-zope.interface==4.5.0
+websocket-client==1.6.3
+wrapt==1.15.0
+xarray==2023.8.0
+xarray-einstats==0.6.0
+yfinance==0.2.28
+zipp==3.16.2
